# WarpFrame

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  conanfile.txt
assets/shaders/: fragment.glsl  vertex.glsl
docs/: TODO.md  warpframe_todo.md
include/: c_rasterizer.h  c_rasterizer_type.h  c_renderer.h  m_type.h  m_util.h  platform_sdl.h  wf_common.h  wf_e_orientation.h  wf_obj_parser.h
include/warpframe/engine/: shader.h
include/warpframe/logger/: logger.h
include/warpframe/util/: constant.h
include/warpframe/window/: keyboard.h  window.h
scripts/: bench.sh  build.sh  conan_install.sh  format.sh  install-hook.sh  pkg-summary.sh  release.sh  run.sh  test.sh
scripts/git-hooks/: pre-commit
src/: c_rasterizer.c  c_renderer.c  keyboard.cc  logger.cc  m_util.c  main.c  main.cc  main.cpp  platform_sdl.c  shader.cc  wf_obj_parser.c  window.cc
